# permisos_circulacion

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
config/: config.py
data/reference/: reference_data.csv
models/: metadata.json
notebooks/: 02_data_validation_cleaning.ipynb  03_eda_exploratory_analysis.ipynb  04_feature_engineering_modeling.ipynb
src/: data_cleaning.py  data_generation.py  evaluate.py  explainability.py  llm_explainer.py  monitoring.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_data_quality.py  test_predict.py
